# misfits

./: .gitattributes  .gitignore  LICENSES_bundled  README.md  conda-env.yml  misfits-vhs.tape  pyproject.toml
misfits/: __init__.py  app.py  data.py  effects.py  headers.py  log.py  logo.py  misfits.scss  misfits.tcss  screens.py  suggester.py  utils.py
misfits/textualeffects/: LICENSE  effects.py
tests/: test_array_col.fits  tests_high_energy_events.fits
