[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "misfits"
version = "0.0.1"
authors = [
    { name="Giuseppe Dilillo", email="peppedilillo@gmail.com" },
]
description = "A terminal-based fits viewer."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy >= 6.1",
    "pandas >= 2.2",
    "textual >= 0.77"
]

[project.scripts]
misfits = 'misfits.app:main'