[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "misfits"
version = "0.0.1"
authors = [
    { name="Giuseppe Dilillo", email="peppedilillo@gmail.com" },
]
description = "A FITS table viewer for the terminal."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy >= 6.1",
    "pandas >= 2.2",
    "terminaltexteffects >= 0.11",
    "textual >= 0.77",
    "click >= 8.1",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.5",
    "black>=24.8",
    "isort>=5.13",
    "mypy>=1.11",
    "ipython>=8.27",
]

[project.scripts]
misfits = 'misfits.app:main'
